fix contrast background

--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,9 @@ a.box:focus,
   color: #474747;
 }
 
-.hero.is-info .title {
+.hero.is-info .title,
+.hero-body,
+.tabs {
   background-color: #0e78be;
 }
 
